# pytest-workshop

./: main.py  mocking-and-patching.md  pyproject.toml  readme.md
src/: le_bank.py
tests/: conftest.py  test_le_bank.py  test_le_bank_fixtures.py  test_le_bank_mocking_patching.py
