[tool.poetry]
name = "pytest-workshop"
version = "0.1.0"
description = ""
authors = ["ManuelCorsetti <42147538+ManuelCorsetti@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
